# vtk_qt_android

./: .gitignore  CMakeLists.txt  Main.qml  MyConeItem.cpp  MyConeItem.h  MyGeomItem.cpp  MyGeomItem.h  MyGlyphItem.cpp  MyGlyphItem.h  MyVolumeItem.cpp  MyVolumeItem.h  MyVtkItem.cpp  MyVtkItem.h  MyWidgetItem.cpp  MyWidgetItem.h  QQuickVTKItem.cxx  QQuickVTKItem.h  QVTKInteractor.cxx  QVTKInteractor.h  QVTKInteractorAdapter.cxx  QVTKInteractorAdapter.h  QVTKInteractorInternal.h  README.md  main.cpp  qtquick.qrc
